Fix image controls look weird on small image

--- a/elements/upfront-image/css/uimage.css
+++ b/elements/upfront-image/css/uimage.css
@@ -677,7 +677,7 @@ a.image-edit-button.deactivated:hover {
 }
 
 .ui-resizable-autohide .uimage-controls {
-	display: none;
+	/* display: none; */
 }
 
 .ui-resizable-autohide .uimage-controls.upfront-control-visible {
@@ -1002,7 +1002,13 @@ div.uimage-controls i.upfront-icon:before {
 	display: none;
 }
 
-.uimage-small .uimage-resize-hint,
+.uimage-small .upfront-ui.uimage-resize-hint {
+	font-size: 11px;
+	padding: 0;
+	line-height: 12px;
+	text-align: center;
+}
+
 .uimage-narrow .uimage-resize-hint {
 	font-size: 11px;
 	padding: 0;
@@ -1046,16 +1052,30 @@ div.uimage-controls i.upfront-icon:before {
 }
 
 .uimage-small .uimage-controls {
-/*	top: 100%;*/
-	margin-top: -10px;
+	height: 8px;
+	overflow: hidden;
 }
 
 .uimage-small .upfront-inline-panel-item {
 	display: none;
 }
 
+.uimage-small .uimage-controls:hover {
+	bottom: -12px;
+	overflow: visible;
+	height: auto;
+}
+
+.uimage-small .uimage-controls:hover .upfront-inline-panel {
+	height: 40px !important; /* count in toggler */
+}
+
 .uimage-small .uimage-controls:hover .upfront-inline-panel-item {
 	display: block;
+}
+
+.uimage-small .uimage-controls:hover .upfront-inline-panel-item .upfront-inline-panel-item {
+	display: inline-block;
 }
 
 .uimage-small .uimage-controls-toggle {
@@ -1310,7 +1330,14 @@ div.uimage-controls i.upfront-icon:before {
 	max-height: none;
 	vertical-align: top;
 }
-.uimage-controls .upfront-inline-panel-bottom-left {
-	bottom:15px;
-	left:15px;
+.uimage-controls.image-element-controls .upfront-inline-panel {
+	bottom: 0;
+	left: 0;
+	position: relative;
+}
+
+.uimage-controls.image-element-controls {
+	width: auto;
+	bottom: 15px;
+	left: 15px;
 }
